--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <section class="card">
       <h2>Über Sylegro</h2>
       <p>
-        Hier kannst du einen kurzen Text über deinen Kollegen / das Unternehmen Sylegro einfügen:
-        wer ihr seid, was euch wichtig ist und was euch von anderen unterscheidet.
+        Hier kannst du einen kurzen Text über dein Unternehmen einfügen:
+        wer ihr seid, was euch wichtig ist und was euch ausmacht.
       </p>
     </section>
 
@@ -92,17 +92,17 @@
       <section class="card">
         <h2>Leistungen</h2>
         <ul>
-          <li>Leistung 1 – kurz und klar beschrieben</li>
-          <li>Leistung 2 – für Zielgruppe XY</li>
-          <li>Leistung 3 – besonderer Fokus / Spezialisierung</li>
+          <li>Leistung 1 – kurz beschrieben</li>
+          <li>Leistung 2 – kurz beschrieben</li>
+          <li>Leistung 3 – kurz beschrieben</li>
         </ul>
       </section>
 
       <section class="card">
-        <h2>Für wen?</h2>
+        <h2>Zielgruppe</h2>
         <p>
-          Beschreibe kurz, für wen die Angebote gedacht sind:
-          Privatpersonen, Firmen, KMU, bestimmte Branchen, etc.
+          Beschreibe hier, für wen die Angebote gedacht sind:
+          Privatkunden, Firmen, bestimmte Branchen etc.
         </p>
       </section>
     </div>
