--- a/index.html
+++ b/index.html
@@ -188,17 +188,25 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="header-inner">
-      <div class="logo-area">
-        <!-- Logo: später eigenes Bild hochladen, Pfad hier anpassen -->
-        <img src="https://via.placeholder.com/80x80?text=Logo" alt="Sylegro Logo">
-        <div class="logo-text">
-          <span>Sylegro</span>
-          <span>Professionelle Dienstleistungen – zuverlässig, persönlich, unkompliziert.</span>
-        </div>
+ <header>
+  <div class="header-inner">
+    <div class="logo-area">
+      <img src="1-logo-verlauf-grün-blau-rgb (1).jpg" alt="Sylegro Logo">
+      <div class="logo-text">
+        <span>Sylegro</span>
+        <span>Professionelle Dienstleistungen – zuverlässig, persönlich, unkompliziert.</span>
       </div>
-      <nav>
+    </div>
+    <nav>
+      <a href="index.html">Startseite</a>
+      <a href="dienstleistungen.html">Dienstleistungen</a>
+      <a href="ueber-uns.html">Über uns</a>
+      <a href="jobs.html">Jobs</a>
+      <a href="kontakt.html">Kontakt</a>
+    </nav>
+  </div>
+</header>
+
         <a href="index.html">Startseite</a>
         <a href="dienstleistungen.html">Dienstleistungen</a>
         <a href="ueber-uns.html">Über uns</a>
