--- a/index.html
+++ b/index.html
@@ -4,188 +4,199 @@
   <meta charset="UTF-8" />
   <title>Sylegro – Startseite</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f5f5f5;
-      color: #111827;
-    }
+<style>
+  * {
+    box-sizing: border-box;
+  }
 
-    /* Header & Navigation */
-    header {
-      background: #111827;
-      color: white;
-      padding: 16px 20px;
-    }
-    .header-inner {
-      max-width: 1000px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 16px;
-    }
-    .logo-area {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-    .logo-area img {
-      height: 48px;
-      width: 48px;
-      object-fit: contain;
-      border-radius: 8px;
-      background: white;
-    }
-    .logo-text {
-      display: flex;
-      flex-direction: column;
-    }
-    .logo-text span:first-child {
-      font-weight: 600;
-      font-size: 1.2rem;
-    }
-    .logo-text span:last-child {
-      font-size: 0.85rem;
-      opacity: 0.9;
-    }
+  /* 1. Deine Markenfarben – nur hier ändern */
+  :root {
+    --sylegro-blue: #0063A5;   /* Blau */
+    --sylegro-green: #17A863;  /* Grün */
+  }
 
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin-left: 16px;
-      font-size: 0.95rem;
-    }
-    nav a:hover {
-      text-decoration: underline;
+  body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #f5f5f5;
+    color: #111827;
+  }
+
+  /* Header & Navigation */
+  header {
+    /* Verlauf von links nach rechts */
+    background: linear-gradient(to right, var(--sylegro-blue), var(--sylegro-green));
+    color: white;
+    padding: 16px 20px;
+  }
+  .header-inner {
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 16px;
+  }
+  .logo-area {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
+  .logo-area img {
+    height: 48px;
+    width: 48px;
+    object-fit: contain;
+    border-radius: 8px;
+    background: white;
+  }
+  .logo-text {
+    display: flex;
+    flex-direction: column;
+  }
+  .logo-text span:first-child {
+    font-weight: 600;
+    font-size: 1.2rem;
+  }
+  .logo-text span:last-child {
+    font-size: 0.85rem;
+    opacity: 0.9;
+  }
+
+  nav a {
+    color: white;
+    text-decoration: none;
+    margin-left: 16px;
+    font-size: 0.95rem;
+  }
+  nav a:hover {
+    text-decoration: underline;
+  }
+  nav {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+
+  /* Layout */
+  main {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: minmax(0, 2fr) minmax(0, 1.5fr);
+    gap: 20px;
+    align-items: flex-start;
+  }
+  @media (max-width: 800px) {
+    .grid {
+      grid-template-columns: 1fr;
     }
     nav {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      justify-content: flex-end;
+      justify-content: flex-start;
+      margin-top: 8px;
     }
+    nav a {
+      margin-left: 0;
+      margin-right: 12px;
+    }
+  }
 
-    /* Layout */
-    main {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: minmax(0, 2fr) minmax(0, 1.5fr);
-      gap: 20px;
-      align-items: flex-start;
-    }
-    @media (max-width: 800px) {
-      .grid {
-        grid-template-columns: 1fr;
-      }
-      nav {
-        justify-content: flex-start;
-        margin-top: 8px;
-      }
-      nav a {
-        margin-left: 0;
-        margin-right: 12px;
-      }
-    }
+  .card {
+    background: white;
+    border-radius: 12px;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    border-top: 4px solid var(--sylegro-blue); /* farbiger Akzent oben */
+  }
 
-    .card {
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-    }
+  h1, h2, h3 {
+    margin-top: 0;
+  }
 
-    h1, h2, h3 {
-      margin-top: 0;
-    }
+  /* Slider */
+  .slider {
+    position: relative;
+    text-align: left;
+  }
+  .slider img {
+    width: 100%;
+    max-height: 260px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 12px;
+  }
+  .slider-title {
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-bottom: 4px;
+  }
+  .slider-text {
+    font-size: 0.95rem;
+    color: #374151;
+  }
+  .slider-dots {
+    margin-top: 10px;
+    display: flex;
+    gap: 6px;
+  }
+  .dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 1px solid #9ca3af;
+    cursor: pointer;
+  }
+  .dot.active {
+    background: var(--sylegro-green); /* aktiver Punkt in deiner Farbe */
+    border-color: var(--sylegro-green);
+  }
 
-    /* Slider */
-    .slider {
-      position: relative;
-      text-align: left;
-    }
-    .slider img {
-      width: 100%;
-      max-height: 260px;
-      object-fit: cover;
-      border-radius: 10px;
-      margin-bottom: 12px;
-    }
-    .slider-title {
-      font-size: 1.1rem;
-      font-weight: 600;
-      margin-bottom: 4px;
-    }
-    .slider-text {
-      font-size: 0.95rem;
-      color: #374151;
-    }
-    .slider-dots {
-      margin-top: 10px;
-      display: flex;
-      gap: 6px;
-    }
-    .dot {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      border: 1px solid #9ca3af;
-      cursor: pointer;
-    }
-    .dot.active {
-      background: #1d4ed8;
-      border-color: #1d4ed8;
-    }
+  /* Kacheln auf der Startseite */
+  .quick-links {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 16px;
+  }
+  .quick-links a {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+  }
+  .quick-links .tile {
+    background: white;
+    border-radius: 12px;
+    padding: 16px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    transition: transform 0.1s ease, box-shadow 0.1s ease, background 0.2s ease;
+  }
+  .quick-links .tile:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    /* leichter Verlauf beim Hover */
+    background: linear-gradient(to right, rgba(0,99,165,0.08), rgba(23,168,99,0.08));
+  }
+  .quick-links h3 {
+    margin-bottom: 6px;
+    font-size: 1rem;
+  }
+  .quick-links p {
+    margin: 0;
+    font-size: 0.9rem;
+    color: #4b5563;
+  }
 
-    /* „Kacheln“ auf der Startseite */
-    .quick-links {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 16px;
-    }
-    .quick-links a {
-      display: block;
-      text-decoration: none;
-      color: inherit;
-    }
-    .quick-links .tile {
-      background: white;
-      border-radius: 12px;
-      padding: 16px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      transition: transform 0.1s ease, box-shadow 0.1s ease;
-    }
-    .quick-links .tile:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    }
-    .quick-links h3 {
-      margin-bottom: 6px;
-      font-size: 1rem;
-    }
-    .quick-links p {
-      margin: 0;
-      font-size: 0.9rem;
-      color: #4b5563;
-    }
-
-    footer {
-      text-align: center;
-      font-size: 0.8rem;
-      color: #6b7280;
-      padding: 20px;
-    }
-  </style>
+  footer {
+    text-align: center;
+    font-size: 0.8rem;
+    color: #6b7280;
+    padding: 20px;
+  }
+</style>
 </head>
 <body>
  <header>
