--- a/index.html
+++ b/index.html
@@ -213,20 +213,10 @@
       <a href="dienstleistungen.html">Dienstleistungen</a>
       <a href="ueber-uns.html">Über uns</a>
       <a href="jobs.html">Jobs</a>
-      <a href="kontakt.html">Kontakt</a>
+      <a href="kontakt.html">Kontakt.html</a>
     </nav>
   </div>
 </header>
-
-        <a href="index.html">Startseite</a>
-        <a href="dienstleistungen.html">Dienstleistungen</a>
-        <a href="ueber-uns.html">Über uns</a>
-        <a href="jobs.html">Jobs</a>
-        <a href="kontakt.html">Kontakt</a>
-      </nav>
-    </div>
-  </header>
-
   <main>
     <section class="grid">
       <!-- Unternehmensbeschreibung -->
@@ -275,7 +265,7 @@
       </a>
       <a href="kontakt.html">
         <div class="tile">
-          <h3>Kontakt</h3>
+          <h3>Kontakt.html</h3>
           <p>So erreichst du uns – ganz unkompliziert.</p>
         </div>
       </a>
