--- a/index.html
+++ b/index.html
@@ -4,25 +4,13 @@
   <meta charset="UTF-8" />
   <title>Sylegro – Startseite</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
   <style>
     * {
       box-sizing: border-box;
     }
 
-    /* Falls ihr später eine Kiro-Webfont-Datei habt, z.B. fonts/Kiro.woff2:
-    @font-face {
-      font-family: "Kiro";
-      src: url("fonts/Kiro.woff2") format("woff2");
-      font-weight: 400;
-      font-style: normal;
-    }
-    */
-
-    :root {
-      --sylegro-blue: #0063A5;
-      --sylegro-green: #17A863;
-    }
-
+    /* Schrift Kiro (Fallback, falls nicht installiert) */
     body {
       font-family: "Kiro", system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", Arial, sans-serif;
@@ -32,85 +20,65 @@
       color: #111827;
     }
 
-    /* Header & Navigation */
+    /* Farben */
+    :root {
+      --sylegro-blue: #0063A5;
+      --sylegro-green: #17A863;
+    }
+
+    /* Header */
     header {
       background: linear-gradient(to right, var(--sylegro-blue), var(--sylegro-green));
       color: white;
       padding: 16px 20px;
     }
+
     .header-inner {
-      max-width: 1000px;
+      max-width: 1050px;
       margin: 0 auto;
       display: flex;
       align-items: center;
       justify-content: space-between;
       gap: 16px;
     }
-    .logo-area {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
+
     .logo-area img {
-      height: 52px;
-      width: 52px;
+      height: 95px;
+      width: auto;
       object-fit: contain;
-      border-radius: 12px;
       background: white;
-      padding: 4px;
-    }
-    .logo-text {
-      display: flex;
-      flex-direction: column;
-    }
-    .logo-text span:first-child {
-      font-weight: 600;
-      font-size: 1.2rem;
-    }
-    .logo-text span:last-child {
-      font-size: 0.85rem;
-      opacity: 0.9;
+      border-radius: 16px;
+      padding: 8px;
     }
 
-    nav {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      justify-content: flex-end;
-    }
     nav a {
       color: white;
       text-decoration: none;
-      margin-left: 16px;
-      font-size: 0.95rem;
+      margin-left: 20px;
+      font-size: 1rem;
+      font-weight: 500;
     }
+
     nav a:hover {
       text-decoration: underline;
     }
 
-    /* Layout */
+    /* Main Layout */
     main {
-      max-width: 1000px;
+      max-width: 1050px;
       margin: 0 auto;
       padding: 20px;
     }
+
     .grid {
       display: grid;
       grid-template-columns: minmax(0, 2fr) minmax(0, 1.5fr);
       gap: 20px;
-      align-items: flex-start;
     }
+
     @media (max-width: 800px) {
       .grid {
         grid-template-columns: 1fr;
-      }
-      nav {
-        justify-content: flex-start;
-        margin-top: 8px;
-      }
-      nav a {
-        margin-left: 0;
-        margin-right: 12px;
       }
     }
 
@@ -119,105 +87,92 @@
       border-radius: 12px;
       padding: 20px;
       margin-bottom: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
       border-top: 4px solid var(--sylegro-blue);
     }
 
-    h1, h2, h3 {
-      margin-top: 0;
-    }
-
     /* Slider */
-    .slider {
-      position: relative;
-      text-align: left;
-    }
     .slider img {
       width: 100%;
-      max-height: 260px;
+      max-height: 270px;
       object-fit: cover;
-      border-radius: 10px;
-      margin-bottom: 12px;
+      border-radius: 12px;
     }
+
     .slider-title {
-      font-size: 1.1rem;
-      font-weight: 600;
-      margin-bottom: 4px;
-    }
-    .slider-text {
-      font-size: 0.95rem;
-      color: #374151;
-    }
-    .slider-dots {
+      font-size: 1.2rem;
       margin-top: 10px;
+      font-weight: 600;
+    }
+
+    .slider-text {
+      color: #374151;
+      font-size: 0.95rem;
+      margin-bottom: 8px;
+    }
+
+    .slider-dots {
       display: flex;
       gap: 6px;
+      margin-top: 10px;
     }
+
     .dot {
-      width: 10px;
-      height: 10px;
+      width: 11px;
+      height: 11px;
       border-radius: 50%;
       border: 1px solid #9ca3af;
       cursor: pointer;
     }
+
     .dot.active {
       background: var(--sylegro-green);
       border-color: var(--sylegro-green);
     }
 
-    /* Kacheln zu Unterseiten */
+    /* Kacheln */
     .quick-links {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 16px;
+      grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+      gap: 20px;
     }
-    .quick-links a {
-      display: block;
-      text-decoration: none;
-      color: inherit;
-    }
+
     .quick-links .tile {
       background: white;
       border-radius: 12px;
-      padding: 16px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      transition: transform 0.1s ease, box-shadow 0.1s ease, background 0.2s ease;
-      border-top: 3px solid transparent;
+      padding: 20px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      transition: 0.2s;
     }
+
     .quick-links .tile:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      background: linear-gradient(to right, rgba(0,99,165,0.06), rgba(23,168,99,0.06));
-      border-top-color: var(--sylegro-green);
-    }
-    .quick-links h3 {
-      margin-bottom: 6px;
-      font-size: 1rem;
-    }
-    .quick-links p {
-      margin: 0;
-      font-size: 0.9rem;
-      color: #4b5563;
+      transform: translateY(-3px);
+      background: linear-gradient(
+        to right,
+        rgba(0, 99, 165, 0.06),
+        rgba(23, 168, 99, 0.06)
+      );
     }
 
     footer {
       text-align: center;
-      font-size: 0.8rem;
-      color: #6b7280;
       padding: 20px;
+      margin-top: 30px;
+      font-size: 0.85rem;
+      color: #6b7280;
     }
   </style>
 </head>
+
 <body>
+
+  <!-- HEADER -->
   <header>
     <div class="header-inner">
       <div class="logo-area">
         <img src="logo.jpg" alt="Sylegro Logo">
-        <div class="logo-text">
-          <span>Sylegro</span>
-          <span>Reinigung & Hauswartung – digital, nachhaltig, effizient.</span>
-        </div>
       </div>
+
       <nav>
         <a href="index.html">Home</a>
         <a href="dienstleistungen.html">Dienstleistungen</a>
@@ -228,128 +183,143 @@
     </div>
   </header>
 
+  <!-- MAIN -->
   <main>
+
     <section class="grid">
-      <!-- Willkommen-Text -->
+
+      <!-- Textblock -->
       <div class="card">
         <h1>Herzlich willkommen bei Sylegro</h1>
+
         <p>
           Herzlich willkommen bei Sylegro, Ihrem zuverlässigen Partner für professionelle
           Reinigungs- und Hauswartungsdienste. Unser Name steht für Qualität, Flexibilität
           und transparente Lösungen, die individuell auf Ihre Bedürfnisse zugeschnitten sind.
         </p>
+
         <p>
-          Mit klarem Fokus auf Unterhaltsreinigung, Spezialreinigung und Hauswartung
-          bieten wir Ihnen ein umfassendes Dienstleistungspaket, das höchsten Standards
-          gerecht wird. Unser erfahrenes Team sorgt dafür, dass Ihre Räumlichkeiten stets
-          sauber, gepflegt und einladend sind – für ein optimales Arbeits- und Wohnumfeld.
+          Mit klarem Fokus auf Unterhaltsreinigung, Spezialreinigung und Hauswartung bieten wir Ihnen
+          ein umfassendes Dienstleistungspaket, das höchsten Standards gerecht wird. Unser erfahrenes
+          Team sorgt dafür, dass Ihre Räumlichkeiten stets sauber, gepflegt und einladend sind – für ein
+          optimales Arbeits- und Wohnumfeld.
         </p>
       </div>
 
-      <!-- Slider: drei Haupt-Dienstleistungen -->
+      <!-- SLIDER -->
       <div class="card slider">
         <h2>Unsere Kernleistungen</h2>
+
         <img id="service-image" src="" alt="Dienstleistung">
+
         <div class="slider-title" id="service-title"></div>
         <div class="slider-text" id="service-text"></div>
+
         <div class="slider-dots" id="slider-dots"></div>
       </div>
+
     </section>
 
     <!-- Vision -->
     <section class="card">
       <h2>Unsere Vision</h2>
+
       <p><strong>Wir gestalten die Zukunft der Gebäudereinigung – digital, nachhaltig und effizient.</strong></p>
+
       <p>
-        Mit innovativen Technologien, umweltfreundlichen Reinigungsmethoden und klar
-        definierten Prozessen setzen wir neue Massstäbe in der Branche. Unsere digitalen
-        Lösungen sorgen für maximale Transparenz und Effizienz, während nachhaltige Verfahren
-        den Werterhalt Ihrer Immobilie sichern.
+        Mit innovativen Technologien, umweltfreundlichen Reinigungsmethoden und klar definierten Prozessen
+        setzen wir neue Massstäbe in der Branche. Unsere digitalen Lösungen sorgen für maximale Transparenz
+        und Effizienz, während nachhaltige Verfahren den Werterhalt Ihrer Immobilie sichern.
       </p>
     </section>
 
-    <!-- Kacheln zu Unterseiten -->
+    <!-- QUICK LINKS -->
     <section class="quick-links">
+
       <a href="dienstleistungen.html">
         <div class="tile">
           <h3>Unsere Dienstleistungen</h3>
-          <p>Unterhaltsreinigung, Spezialreinigung und Hauswartung im Überblick.</p>
+          <p>Unterhaltsreinigung, Spezialreinigung & Hauswartung.</p>
         </div>
       </a>
+
       <a href="ueber-uns.html">
         <div class="tile">
           <h3>Über uns</h3>
-          <p>Die Geschichte hinter Sylegro – Erfahrung, Werte und Team.</p>
+          <p>Die Menschen und Werte hinter Sylegro.</p>
         </div>
       </a>
+
       <a href="jobs.html">
         <div class="tile">
           <h3>Jobs</h3>
-          <p>Mehr als nur ein Job – werde Teil unseres Teams.</p>
+          <p>Werde Teil unseres Teams.</p>
         </div>
       </a>
+
       <a href="kontakt.html">
         <div class="tile">
           <h3>Kontakt</h3>
-          <p>Haben Sie Fragen? Wir freuen uns auf Ihre Nachricht.</p>
+          <p>Wir freuen uns auf Ihre Anfrage.</p>
         </div>
       </a>
+
     </section>
+
   </main>
 
+  <!-- FOOTER -->
   <footer>
     © Sylegro <span id="year"></span>
-    <script>
-      document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
   </footer>
 
-  <!-- Slider-Logik -->
   <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    /* Slider mit deinen Bildern */
     const services = [
       {
         title: "Unterhaltsreinigung",
-        text: "Sauberkeit mit System: Tägliche oder periodische Reinigung von Büros, Schulen, Verkaufsflächen und mehr – effizient, zuverlässig und nachhaltig.",
-        image: "https://via.placeholder.com/800x260?text=Unterhaltsreinigung"
+        text: "Regelmässige Reinigung von Büros, Liegenschaften und Gewerbeflächen – sauber, zuverlässig und strukturiert.",
+        image: "Titelbildmitlogo.jpg"
       },
       {
         title: "Spezialreinigung",
-        text: "Tiefenreinigung, Fenster- und Fassadenreinigung, Baureinigung und mehr – für Bereiche, in denen eine herkömmliche Reinigung nicht ausreicht.",
-        image: "https://via.placeholder.com/800x260?text=Spezialreinigung"
+        text: "Tiefenreinigungen, Glas- und Fassadenreinigung, Bau- und Umzugsreinigung für besondere Anforderungen.",
+        image: "AdobeStock_482143067.jpeg"
       },
       {
         title: "Hauswartung",
-        text: "Technische Kontrollen, Pflege von Innen- und Aussenanlagen, Winterdienst und laufende Betreuung – Ihre Immobilie in besten Händen.",
-        image: "https://via.placeholder.com/800x260?text=Hauswartung"
+        text: "Umfassende Betreuung Ihrer Liegenschaft: Technik, Pflege der Aussenanlagen und Werterhaltung aus einer Hand.",
+        image: "Titelbildmitlogo.jpg"
       }
     ];
 
-    const imgEl = document.getElementById("service-image");
-    const titleEl = document.getElementById("service-title");
-    const textEl = document.getElementById("service-text");
-    const dotsContainer = document.getElementById("slider-dots");
+    const img = document.getElementById("service-image");
+    const title = document.getElementById("service-title");
+    const text = document.getElementById("service-text");
+    const dots = document.getElementById("slider-dots");
 
     let current = 0;
 
     function renderDots() {
-      dotsContainer.innerHTML = "";
-      services.forEach((_, index) => {
+      dots.innerHTML = "";
+      services.forEach((_, i) => {
         const dot = document.createElement("div");
-        dot.className = "dot" + (index === current ? " active" : "");
-        dot.addEventListener("click", () => {
-          current = index;
+        dot.className = "dot" + (i === current ? " active" : "");
+        dot.onclick = () => {
+          current = i;
           updateSlider();
-        });
-        dotsContainer.appendChild(dot);
+        };
+        dots.appendChild(dot);
       });
     }
 
     function updateSlider() {
-      const service = services[current];
-      imgEl.src = service.image;
-      imgEl.alt = service.title;
-      titleEl.textContent = service.title;
-      textEl.textContent = service.text;
+      const s = services[current];
+      img.src = s.image;
+      title.textContent = s.title;
+      text.textContent = s.text;
       renderDots();
     }
 
@@ -360,5 +330,6 @@
 
     updateSlider();
   </script>
+
 </body>
 </html>
