--- a/index.html
+++ b/index.html
@@ -4,173 +4,268 @@
   <meta charset="UTF-8" />
   <title>Sylegro – Startseite</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
   <style>
     * {
       box-sizing: border-box;
     }
 
-    /* Schrift Kiro (Fallback, falls nicht installiert) */
+    /* Basis-Links: nicht lila, nicht unterstrichen */
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: none;
+    }
+
+    :root {
+      --sylegro-blue: #0063A5;
+      --sylegro-green: #17A863;
+      --bg-light: #f5f5f5;
+    }
+
+    /* Schrift (Kiro als Wunschschrift, dann Fallbacks) */
     body {
       font-family: "Kiro", system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f5f5f5;
+      background: var(--bg-light);
       color: #111827;
     }
 
-    /* Farben */
-    :root {
-      --sylegro-blue: #0063A5;
-      --sylegro-green: #17A863;
-    }
-
-    /* Header */
+    /* HEADER */
     header {
       background: linear-gradient(to right, var(--sylegro-blue), var(--sylegro-green));
       color: white;
-      padding: 16px 20px;
+      padding: 18px 20px;
     }
 
     .header-inner {
-      max-width: 1050px;
+      max-width: 1100px;
       margin: 0 auto;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      gap: 16px;
+      gap: 20px;
     }
 
-    .logo-area img {
-      height: 95px;
+    /* Logo-Bubble */
+    .logo-area {
+      display: flex;
+      align-items: center;
+    }
+
+    .logo-bubble {
+      background: #ffffff;
+      border-radius: 999px;
+      padding: 10px 18px;
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.18);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .logo-bubble img {
+      height: 110px;   /* Logo grösser */
       width: auto;
       object-fit: contain;
-      background: white;
-      border-radius: 16px;
-      padding: 8px;
+      display: block;
+    }
+
+    /* Navigation */
+    nav {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+      gap: 18px;
     }
 
     nav a {
-      color: white;
-      text-decoration: none;
-      margin-left: 20px;
-      font-size: 1rem;
+      color: white;          /* explizit weiss im Header */
+      font-size: 0.98rem;
       font-weight: 500;
+      opacity: 0.95;
+      position: relative;
+      padding-bottom: 4px;
     }
 
-    nav a:hover {
-      text-decoration: underline;
+    nav a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      height: 2px;
+      background: rgba(255, 255, 255, 0.9);
+      transition: width 0.2s ease-out;
+      border-radius: 999px;
     }
 
-    /* Main Layout */
+    nav a:hover::after {
+      width: 100%;
+    }
+
+    /* MAIN LAYOUT */
     main {
-      max-width: 1050px;
+      max-width: 1100px;
       margin: 0 auto;
-      padding: 20px;
+      padding: 24px 20px 32px;
     }
 
     .grid {
       display: grid;
       grid-template-columns: minmax(0, 2fr) minmax(0, 1.5fr);
-      gap: 20px;
+      gap: 22px;
+      align-items: flex-start;
+      margin-bottom: 20px;
     }
 
-    @media (max-width: 800px) {
+    @media (max-width: 900px) {
       .grid {
         grid-template-columns: 1fr;
+      }
+      .header-inner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      nav {
+        justify-content: flex-start;
       }
     }
 
     .card {
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
+      background: #ffffff;
+      border-radius: 18px;
+      padding: 22px 22px 20px;
       margin-bottom: 20px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
       border-top: 4px solid var(--sylegro-blue);
     }
 
-    /* Slider */
+    h1, h2, h3 {
+      margin-top: 0;
+    }
+
+    h1 {
+      font-size: 1.6rem;
+      margin-bottom: 12px;
+    }
+
+    h2 {
+      font-size: 1.35rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      line-height: 1.6;
+      font-size: 0.98rem;
+    }
+
+    /* SLIDER-BEREICH */
     .slider img {
       width: 100%;
-      max-height: 270px;
+      max-height: 280px;
       object-fit: cover;
-      border-radius: 12px;
+      border-radius: 14px;
+      margin-bottom: 12px;
     }
 
     .slider-title {
-      font-size: 1.2rem;
-      margin-top: 10px;
+      font-size: 1.1rem;
       font-weight: 600;
+      margin-bottom: 4px;
     }
 
     .slider-text {
-      color: #374151;
       font-size: 0.95rem;
-      margin-bottom: 8px;
+      color: #374151;
+      margin-bottom: 10px;
     }
 
     .slider-dots {
       display: flex;
-      gap: 6px;
-      margin-top: 10px;
+      gap: 8px;
+      margin-top: 8px;
     }
 
     .dot {
       width: 11px;
       height: 11px;
-      border-radius: 50%;
+      border-radius: 999px;
       border: 1px solid #9ca3af;
       cursor: pointer;
+      background: transparent;
+      transition: background 0.15s ease, border-color 0.15s ease, transform 0.15s ease;
     }
 
     .dot.active {
       background: var(--sylegro-green);
       border-color: var(--sylegro-green);
+      transform: scale(1.1);
     }
 
-    /* Kacheln */
+    /* KACHELN / QUICK LINKS */
     .quick-links {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); /* breiter */
+      gap: 22px;
+      margin-top: 10px;
     }
 
     .quick-links .tile {
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-      transition: 0.2s;
+      border-radius: 18px;
+      padding: 20px 20px 18px;
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+      background: linear-gradient(135deg,
+        rgba(0, 99, 165, 0.08),
+        rgba(23, 168, 99, 0.08)
+      );
+      border: 1px solid rgba(148, 163, 184, 0.25);
+      transition: transform 0.18s ease, box-shadow 0.18s ease,
+                  background 0.18s ease, border-color 0.18s ease;
+    }
+
+    .quick-links .tile h3 {
+      margin-bottom: 6px;
+      font-size: 1.05rem;
+    }
+
+    .quick-links .tile p {
+      margin: 0;
+      font-size: 0.94rem;
+      color: #374151;
     }
 
     .quick-links .tile:hover {
-      transform: translateY(-3px);
-      background: linear-gradient(
-        to right,
-        rgba(0, 99, 165, 0.06),
-        rgba(23, 168, 99, 0.06)
+      transform: translateY(-4px);
+      box-shadow: 0 14px 30px rgba(15, 23, 42, 0.12);
+      background: linear-gradient(135deg,
+        rgba(0, 99, 165, 0.14),
+        rgba(23, 168, 99, 0.16)
       );
+      border-color: rgba(37, 99, 235, 0.3);
     }
 
     footer {
       text-align: center;
-      padding: 20px;
-      margin-top: 30px;
+      padding: 18px 20px 26px;
       font-size: 0.85rem;
       color: #6b7280;
     }
   </style>
 </head>
-
 <body>
 
   <!-- HEADER -->
   <header>
     <div class="header-inner">
       <div class="logo-area">
-        <img src="logo.jpg" alt="Sylegro Logo">
+        <!-- Logo: Datei muss logo.jpg heissen -->
+        <div class="logo-bubble">
+          <img src="logo.jpg" alt="Sylegro Logo">
+        </div>
       </div>
 
       <nav>
@@ -187,17 +282,14 @@
   <main>
 
     <section class="grid">
-
-      <!-- Textblock -->
+      <!-- Willkommen-Text -->
       <div class="card">
         <h1>Herzlich willkommen bei Sylegro</h1>
-
         <p>
           Herzlich willkommen bei Sylegro, Ihrem zuverlässigen Partner für professionelle
           Reinigungs- und Hauswartungsdienste. Unser Name steht für Qualität, Flexibilität
           und transparente Lösungen, die individuell auf Ihre Bedürfnisse zugeschnitten sind.
         </p>
-
         <p>
           Mit klarem Fokus auf Unterhaltsreinigung, Spezialreinigung und Hauswartung bieten wir Ihnen
           ein umfassendes Dienstleistungspaket, das höchsten Standards gerecht wird. Unser erfahrenes
@@ -206,26 +298,20 @@
         </p>
       </div>
 
-      <!-- SLIDER -->
+      <!-- Slider -->
       <div class="card slider">
         <h2>Unsere Kernleistungen</h2>
-
         <img id="service-image" src="" alt="Dienstleistung">
-
         <div class="slider-title" id="service-title"></div>
         <div class="slider-text" id="service-text"></div>
-
         <div class="slider-dots" id="slider-dots"></div>
       </div>
-
     </section>
 
     <!-- Vision -->
     <section class="card">
       <h2>Unsere Vision</h2>
-
       <p><strong>Wir gestalten die Zukunft der Gebäudereinigung – digital, nachhaltig und effizient.</strong></p>
-
       <p>
         Mit innovativen Technologien, umweltfreundlichen Reinigungsmethoden und klar definierten Prozessen
         setzen wir neue Massstäbe in der Branche. Unsere digitalen Lösungen sorgen für maximale Transparenz
@@ -233,13 +319,12 @@
       </p>
     </section>
 
-    <!-- QUICK LINKS -->
+    <!-- Kacheln / Quick Links -->
     <section class="quick-links">
-
       <a href="dienstleistungen.html">
         <div class="tile">
           <h3>Unsere Dienstleistungen</h3>
-          <p>Unterhaltsreinigung, Spezialreinigung & Hauswartung.</p>
+          <p>Unterhaltsreinigung, Spezialreinigung &amp; Hauswartung im Überblick.</p>
         </div>
       </a>
 
@@ -263,7 +348,6 @@
           <p>Wir freuen uns auf Ihre Anfrage.</p>
         </div>
       </a>
-
     </section>
 
   </main>
@@ -273,10 +357,10 @@
     © Sylegro <span id="year"></span>
   </footer>
 
+  <!-- Slider-Logik -->
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
 
-    /* Slider mit deinen Bildern */
     const services = [
       {
         title: "Unterhaltsreinigung",
@@ -318,6 +402,7 @@
     function updateSlider() {
       const s = services[current];
       img.src = s.image;
+      img.alt = s.title;
       title.textContent = s.title;
       text.textContent = s.text;
       renderDots();
