--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     }
 
     .logo-bubble img {
-      height: 110px;   /* Logo grösser */
+      height: 110px;   /* Logo-Grösse */
       width: auto;
       object-fit: contain;
       display: block;
@@ -209,7 +209,7 @@
     /* KACHELN / QUICK LINKS */
     .quick-links {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); /* breiter */
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       gap: 22px;
       margin-top: 10px;
     }
@@ -262,9 +262,9 @@
   <header>
     <div class="header-inner">
       <div class="logo-area">
-        <!-- Logo: Datei muss logo.jpg heissen -->
+        <!-- ⬇ HIER das neue Logo: Dateiname ggf. anpassen (z.B. logo-mit-claim-rgb.png) -->
         <div class="logo-bubble">
-          <img src="logo.jpg" alt="Sylegro Logo">
+          <img src="logo-mit-claim.png" alt="Sylegro Logo mit Claim">
         </div>
       </div>
 
